...
    paddingValues: PaddingValues,
    controller: LifecycleCameraController,
    context: Context,
    isCamOpen: () -> Unit,
    addElem: (Bitmap) -> Unit
) {
  Box(modifier = Modifier.fillMaxSize().padding(paddingValues).testTag("cameraScreen")) {
    CameraPreview(controller, Modifier.fillMaxSize())
    IconButton(
        onClick = isCamOpen, modifier = Modifier.align(Alignment.TopEnd).testTag("closeCamera")) {
          Icon(Icons.Default.ArrowBack, contentDescription = "Close camera")
        }
    IconButton(
        onClick = {
          takePhoto(
              controller,
              { bitmap ->
                isCamOpen()
                addElem(bitmap)
              },
              context)
        },
        modifier = Modifier.align(Alignment.BottomCenter).testTag("takePicture")) {
          Icon(Icons.Default.PhotoCamera, contentDescription = "Take picture")
        }
    IconButton(
        onClick = { controller.cameraSelector = flipCamera(controller.cameraSelector) },
        modifier = Modifier.align(Alignment.BottomEnd).testTag("switchCamera")) {
          Icon(Icons.Default.Cameraswitch, contentDescription = "Switch camera")
        }
  }
}

