...
          )) {
        Column(
            modifier =
                Modifier.background(
                        color = Color.White,
                        shape = RoundedCornerShape(size = ROUNDED_CORNER_SHAPE_DEFAULT.dp))
                    .testTag("addImageDialog"),
            verticalArrangement = Arrangement.Center,
            horizontalAlignment = Alignment.CenterHorizontally,
        ) {
          Text(
              text = "Add an image",
              style = TextStyle(color = Color.Black, fontSize = TITLE_FONTSIZE.sp),
          )
          TextButton(
              onClick = onGalleryClick,
              modifier =
                  Modifier.fillMaxWidth()
                      .padding(STANDARD_PADDING.dp)
                      .testTag("galleryButton")
                      .border(
                          width = BORDER_STROKE_SM.dp,
                          color = Color.Cyan,
                          shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp))) {
                Text(
                    text = "Choose from gallery",
...

          TextButton(
              onClick = onCameraClick,
              modifier =
                  Modifier.fillMaxWidth()
                      .padding(STANDARD_PADDING.dp)
                      .testTag("cameraButton")
                      .border(
                          width = BORDER_STROKE_SM.dp,
                          color = Color.Cyan,
                          shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp))) {
                Text(
                    text = "Take pictures with camera",
...
          if (default) {
            TextButton(
                onClick = onSelectDefault,
                modifier =
                    Modifier.fillMaxWidth()
                        .padding(STANDARD_PADDING.dp)
                        .testTag("defaultImageButton")
                        .border(
                            width = BORDER_STROKE_SM.dp,
                            color = Color.Cyan,
                            shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp))) {
                  Text(
                      text = "Select default picture",
...
