...
                      newInterest = null
                      onUpdateInterests(updatedList)
                    }
                  })
            },
            enabled = newInterest != null,
            modifier = Modifier.testTag("addInterestButton"),
            shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp),
            colors = ButtonDefaults.buttonColors(containerColor = Color(MAIN_COLOR_DARK))) {
              Text("Add Interest")
            }
        // Interests List
        LazyRow(
...
                        value =
                            selectedCategory?.name
                                ?: context.getString(R.string.select_activity_category),
                        onValueChange = { selectedCategory = Category.valueOf(it) },
                        label = { Text("Category") },
                        readOnly = true,
                        modifier = Modifier.menuAnchor().testTag("categoryDropdown"),
                        colors =
                            TextFieldDefaults.colors(
                                focusedContainerColor = Color.Transparent,
                                unfocusedContainerColor = Color.Transparent,
                                focusedIndicatorColor = Color.Transparent,
                                unfocusedIndicatorColor = Color.Transparent,
...
                    OutlinedTextField(
                        value =
                            selectedInterest ?: context.getString(R.string.select_activity_type),
                        onValueChange = { selectedInterest = it },
                        label = { Text("Interest") },
                        readOnly = true,
                        modifier = Modifier.menuAnchor().testTag("interestDropdown"),
                        colors =
                            TextFieldDefaults.colors(
                                focusedContainerColor = Color.Transparent,
                                unfocusedContainerColor = Color.Transparent,
                                focusedIndicatorColor = Color.Transparent,
                                unfocusedIndicatorColor = Color.Transparent,
...
      }
}

@Composable
fun ModifyPictureButton(
    showDialogImage: () -> Unit,
    modifier: Modifier = Modifier.testTag("uploadPicture")
) {
  Box(
      modifier =
          modifier
              .clickable { showDialogImage() } // Handle click action
              .padding(MEDIUM_PADDING.dp)
...
